--- a/app/src/main/res/layout/fragment_submit.xml
+++ b/app/src/main/res/layout/fragment_submit.xml
@@ -343,8 +343,10 @@
 
                                 <Spinner
                                     android:id="@+id/spinner_company_type"
-                                    android:layout_width="wrap_content"
+                                    android:layout_width="match_parent"
                                     android:layout_height="wrap_content"
+                                    android:layout_marginEnd="30dp"
+                                    android:gravity="end"
                                     android:prompt="@string/hint"
                                     android:spinnerMode="dialog" />
                             </LinearLayout>
@@ -379,8 +381,10 @@
 
                                 <Spinner
                                     android:id="@+id/spinner_company_province"
-                                    android:layout_width="wrap_content"
+                                    android:layout_width="match_parent"
                                     android:layout_height="wrap_content"
+                                    android:layout_marginEnd="30dp"
+                                    android:gravity="end"
                                     android:prompt="@string/hint"
                                     android:spinnerMode="dialog" />
                             </LinearLayout>
@@ -415,8 +419,10 @@
 
                                 <Spinner
                                     android:id="@+id/spinner_company_city"
-                                    android:layout_width="wrap_content"
+                                    android:layout_width="match_parent"
                                     android:layout_height="wrap_content"
+                                    android:layout_marginEnd="30dp"
+                                    android:gravity="end"
                                     android:prompt="@string/hint"
                                     android:spinnerMode="dialog" />
                             </LinearLayout>
